# tensorpowerflow

./: .gitignore  MANIFEST.in  README.md  README.rst  environment.yml  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: BinderHub.yml  python-package.yml
binder/: Dockerfile  requirements.txt
examples/: example_basic.py  example_one_powerflow.ipynb  example_python.py  example_time_series.py  example_time_series_simulation.ipynb  first_notebook.ipynb
experiments/: compute_simulation_times.py  config.toml  config_batch.toml  config_example.toml  create_cases.py  generate_networks.py  grid_size_sweep.py  laurent_multiple_init.py  load_case_numba.py  load_case_numba_gpu.py  load_results.py  pandapower_comparison.py  plots.py  reshape_practice.py  sweep_experiments.py  test_gpu_v2.py  test_read_toml_file.py  time_step_sweep.py  trial_gpu.py  utils_experiments.py
experiments/DELETE/: cpu_sweep.py  grid_size_sweep.py  pandapower_comparison.py  pandapower_comparison_v2.py  time_step_sweep.py
experiments/data/to_glue/: glue_results.py
experiments/figures/: README.txt
experiments/grid_data/: Nodes_2.csv  Nodes_34_I.csv  Nodes_34_Z.csv
tensorpowerflow/: __init__.py  grid.py  numbarize.py  run_batch.py  utils.py
tensorpowerflow/data/: Lines_2.csv
tensorpowerflow/gpu_tensor/: __init__.py  gpu_interface.py
tensorpowerflow/gpu_tensor/lib/win/: shared_library_complex.exp  shared_library_complex.lib
tensorpowerflow/pyMKL/: MKLutils.py  README.txt  __init__.py  loadMKL.py  pardisoInterface.py  pardisoSolver.py
tensorpowerflow/pyMKL/Tests/: trial_MKLUtils.py  trial_Pardiso.py
tensorpowerflow/tests/: test_eta.py  test_gpu_interface.py  test_hp_laurent.py  test_hp_laurent_pardiso.py  test_hp_tensor_pardiso.py  test_memory_size.py  test_pardiso.py  test_power_flow.py  test_powerflows.py  test_powerflows_pardiso_gpu.py  test_sam_dimensions.py  test_sam_juan_power_flow.py  test_sam_power_flow.py  test_tensor_power_flow.py
