[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorpowerflow"
version = "0.0.4"
urls = {repository = "https://github.com/MauricioSalazare/tensorpowerflow"}
authors = [{author = "Mauricio Salazar", email = "e.m.salazar.duque@tue.nl"},]
description = "Ultra fast power flow based in Laurent series expansion."
readme = "README.rst"
keywords = ["power flow", "power systems", "time series loading"]
license = {text = "MIT"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent",]
dependencies = ["numpy",
                "pandas",
                "matplotlib",
                "scipy",
                "tqdm",
                "numba>=0.53.0",
                "networkx",
                "seaborn",
                "pandapower"]
requires-python = ">=3.0"

[project.optional-dependencies]
dev = ["build", "twine", "matplotlib", "jupyterlab", "tox"]
test = ["pytest"]
doc = ["sphinx"]

[tool.setuptools]
include-package-data = true
package-data = {"*" = ["data/*.csv", "pyMKL/*.txt"]}  # Automatically enables include-package-data=true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["tensorpowerflow*"]  # Look only one folder in the root (the folder that its the package)
namespaces = true

